fix: update styles for improved spacing and list formatting in global CSS

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -56,7 +56,7 @@ h3,
 h4,
 h5,
 h6 {
-	margin: 0 0 0.5rem 0;
+	margin: 1rem 0 ;
 	color: rgb(var(--black));
 	line-height: 1.2;
 }
@@ -90,6 +90,20 @@ p {
 }
 .prose p {
 	margin-bottom: 2em;
+}
+ul {
+	list-style: inside;
+	margin-bottom: 1em;
+	padding-left: 1em;
+}
+li {	
+	line-height: 1.2;
+}
+.prose ul {
+	margin-bottom: 2em;
+}
+.prose li {
+	margin-bottom: 0.75em;
 }
 textarea {
 	width: 100%;
@@ -140,6 +154,7 @@ blockquote {
 hr {
 	border: none;
 	border-top: 1px solid rgb(var(--gray-light));
+	margin-bottom: 30px;
 }
 @media (max-width: 720px) {
 	body {
